--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>CakePHP Jenkins Template by vitorpc</title>
-    
+    <title>CakePHP Jenkins Template by ojengwa</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
+    <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -18,15 +17,19 @@
       <header>
         <h1>CakePHP Jenkins Template</h1>
         <p>Template for Jenkins jobs for CakePHP projects.</p>
-        <p class="view"><a href="https://github.com/vitorpc/cakephp-jenkins-template">View the Project on GitHub <small>vitorpc/cakephp-jenkins-template</small></a></p>
+
+        <p class="view"><a href="https://github.com/ojengwa/cakephp-jenkins-template">View the Project on GitHub <small>ojengwa/cakephp-jenkins-template</small></a></p>
+
+
         <ul>
-          <li><a href="https://github.com/vitorpc/cakephp-jenkins-template/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/vitorpc/cakephp-jenkins-template/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/vitorpc/cakephp-jenkins-template">Fork On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/ojengwa/cakephp-jenkins-template/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/ojengwa/cakephp-jenkins-template/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/ojengwa/cakephp-jenkins-template">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
-        <h3>Using the Job Template.</h3>
+        <h3>
+<a id="using-the-job-template" class="anchor" href="#using-the-job-template" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using the Job Template.</h3>
 
 <ol>
 <li>
@@ -44,38 +47,49 @@ $ chown -R jenkins:nogroup cakephp-template/
 </code></pre>
 </li>
 <li><p>Click on "New Job".</p></li>
-<li><p>Enter a "Job name".</p></li>
-<li><p>Select "Copy existing job" and enter "cakephp-template" into the "Copy from" field.</p></li>
-<li><p>Click "OK".</p></li>
-<li><p>Disable the "Disable Build" option.</p></li>
-<li><p>Fill in your "Source Code Management" information.</p></li>
-<li><p>Configure a "Build Trigger".</p></li>
-<li><p>Click "Save".</p></li>
-</ol><h3>Related Projects</h3>
+<li>Enter a "Job name".</li>
+<li>Select "Copy existing job" and enter "cakephp-template" into the "Copy from" field.</li>
+<li>Click "OK".</li>
+<li>Disable the "Disable Build" option.</li>
+<li>Fill in your "Source Code Management" information.</li>
+<li>Configure a "Build Trigger".</li>
+<li>Click "Save".</li>
+</ol>
+
+<h3>
+<a id="related-projects" class="anchor" href="#related-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Related Projects</h3>
 
 <ul>
 <li>Template for Jenkins jobs for PHP projects</li>
-</ul><blockquote>
+</ul>
+
+<blockquote>
 <p>The goal of this project is to provide a standard template for Jenkins jobs for PHP projects.</p>
 </blockquote>
+
 <ul>
 <li>PHP Project Wizard (PPW)</li>
-</ul><blockquote>
+</ul>
+
+<blockquote>
 <p>The PHP Project Wizard (PPW) is a commandline tool that can be used to generate the scripts and configuration files necessary for the build automation of a PHP project.</p>
 </blockquote>
-<h3>Support or Contact</h3>
 
-<p><a href="https://github.com/vitorpc/cakephp-jenkins-template/issues">Issues are tracked on GitHub</a></p>
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p><a href="https://github.com/ojengwa/cakephp-jenkins-template/issues">Issues are tracked on GitHub</a></p>
 
 <p>The #jenkins-php channel on the FreeNode IRC network can be used to discuss all issues related to Jenkins and PHP.</p>
 
-<p>Based on the <a href="https://github.com/sebastianbergmann/php-jenkins-template">Template for Jenkins jobs for PHP projects</a> by Sebastian Bergmann (<a href="/sebastianbergmann" class="user-mention">@sebastianbergmann</a>) </p>
+<p>Based on the <a href="https://github.com/sebastianbergmann/php-jenkins-template">Template for Jenkins jobs for PHP projects</a> by Sebastian Bergmann (<a href="https://github.com/sebastianbergmann" class="user-mention">@sebastianbergmann</a>) </p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/vitorpc">vitorpc</a></p>
+        <p>This project is maintained by <a href="https://github.com/ojengwa">ojengwa</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
+    
   </body>
 </html>
