Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <h1>CakePHP Jenkins Template</h1>
         <p>Template for Jenkins jobs for CakePHP projects.</p>
 
-        <p class="view"><a href="https://github.com/ojengwa/cakephp-jenkins-template">View the Project on GitHub <small>ojengwa/cakephp-jenkins-template</small></a></p>
+        <p class="view"><a href="https://github.com/ojengwa/cakephp-template">View the Project on GitHub <small>ojengwa/cakephp-template</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/ojengwa/cakephp-jenkins-template/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/ojengwa/cakephp-jenkins-template/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/ojengwa/cakephp-jenkins-template">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/ojengwa/cakephp-template/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/ojengwa/cakephp-template/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/ojengwa/cakephp-template">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -33,10 +33,10 @@
 
 <ol>
 <li>
-<p>Check out the cakephp-jenkins-template project from Git:</p>
+<p>Check out the cakephp-template project from Git:</p>
 
 <pre><code>$ cd $JENKINS_HOME/jobs
-$ git clone git://github.com/vitorpc/cakephp-jenkins-template.git cakephp-template
+$ git clone git://github.com/ojengwa/cakephp-template.git cakephp-template
 $ chown -R jenkins:nogroup cakephp-template/
 </code></pre>
 </li>
@@ -50,7 +50,7 @@ $ chown -R jenkins:nogroup cakephp-template/
 <li>Enter a "Job name".</li>
 <li>Select "Copy existing job" and enter "cakephp-template" into the "Copy from" field.</li>
 <li>Click "OK".</li>
-<li>Disable the "Disable Build" option.</li>
+<li>Uncheck the "Disable Build" option.</li>
 <li>Fill in your "Source Code Management" information.</li>
 <li>Configure a "Build Trigger".</li>
 <li>Click "Save".</li>
@@ -78,7 +78,7 @@ $ chown -R jenkins:nogroup cakephp-template/
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p><a href="https://github.com/ojengwa/cakephp-jenkins-template/issues">Issues are tracked on GitHub</a></p>
+<p><a href="https://github.com/ojengwa/cakephp-template/issues">Issues are tracked on GitHub</a></p>
 
 <p>The #jenkins-php channel on the FreeNode IRC network can be used to discuss all issues related to Jenkins and PHP.</p>
 
