Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 <li>
 <p>Check out the cakephp-template project from Git:</p>
 
-<pre><code>$ cd $JENKINS_HOME/jobs
+<pre><code>$ sudo su jenkins
+$ cd $JENKINS_HOME/jobs
 $ git clone git://github.com/ojengwa/cakephp-template.git cakephp-template
-$ chown -R jenkins:nogroup cakephp-template/
 </code></pre>
 </li>
 <li>
