Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>CakePHP Jenkins Template by ojengwa</title>
+    <title>CakePHP-2 Jenkins Template by ojengwa</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,16 +15,16 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>CakePHP Jenkins Template</h1>
-        <p>Template for Jenkins jobs for CakePHP projects.</p>
+        <h1>CakePHP-2 Jenkins Template</h1>
+        <p>Template for Jenkins jobs for CakePHP-2 projects.</p>
 
-        <p class="view"><a href="https://github.com/ojengwa/cakephp-template">View the Project on GitHub <small>ojengwa/cakephp-template</small></a></p>
+        <p class="view"><a href="https://github.com/ojengwa/cakephp2-template">View the Project on GitHub <small>ojengwa/cakephp2-template</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/ojengwa/cakephp-template/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/ojengwa/cakephp-template/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/ojengwa/cakephp-template">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/ojengwa/cakephp2-template/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/ojengwa/cakephp2-template/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/ojengwa/cakephp2-template">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -33,11 +33,11 @@
 
 <ol>
 <li>
-<p>Check out the cakephp-template project from Git:</p>
+<p>Check out the cakephp2-template project from Git:</p>
 
 <pre><code>$ sudo su jenkins
 $ cd $JENKINS_HOME/jobs
-$ git clone git://github.com/ojengwa/cakephp-template.git cakephp-template
+$ git clone git://github.com/ojengwa/cakephp2-template.git cakephp2-template
 </code></pre>
 </li>
 <li>
@@ -46,9 +46,9 @@ $ git clone git://github.com/ojengwa/cakephp-template.git cakephp-template
 <pre><code>$ java -jar jenkins-cli.jar -s http://localhost:8080 reload-configuration
 </code></pre>
 </li>
-<li><p>Click on "New Job".</p></li>
+<li><p>Click on "New Job or New Item".</p></li>
 <li>Enter a "Job name".</li>
-<li>Select "Copy existing job" and enter "cakephp-template" into the "Copy from" field.</li>
+<li>Select "Copy existing job" and enter "cakephp2-template" into the "Copy from" field.</li>
 <li>Click "OK".</li>
 <li>Uncheck the "Disable Build" option.</li>
 <li>Fill in your "Source Code Management" information.</li>
@@ -78,7 +78,7 @@ $ git clone git://github.com/ojengwa/cakephp-template.git cakephp-template
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p><a href="https://github.com/ojengwa/cakephp-template/issues">Issues are tracked on GitHub</a></p>
+<p><a href="https://github.com/ojengwa/cakephp2-template/issues">Issues are tracked on GitHub</a></p>
 
 <p>The #jenkins-php channel on the FreeNode IRC network can be used to discuss all issues related to Jenkins and PHP.</p>
 
